# GPolylla

./: .gitignore  30000poisson_polylla.ale  30000poisson_polylla.off  CMakeLists.txt  README.md  comp_sec_output_seed  main.cu  samplesGeneration.ipynb
experiments/: 1000_random.off  100_random.off  1536_poisson.off  200_random.off  30000poisson.off  30000random.off  30000semiUniform.off  30000uniform.off  300_random.off  400_random.off  500_random.off  600_random.off  700_random.off  800_random.off  900_random.off  Makefile  antigui_plots.ipynb  experiment.ipynb  generate_big_meshes  generate_big_meshes.cpp  generate_big_meshes.ipynb  plots.ipynb  py_script.py  run.slurm  run_all.sh  run_gpu.slurm
experiments/CPU_and_GPU/cpu-grid-results/: Polylla  gpolylla_44886.out  gpolylla_44887.out  gpolylla_44888.out  gpolylla_44889.out  gpolylla_44890.out  gpolylla_44891.out  gpolylla_44892.out  run_benchmark.slurm
experiments/CPU_and_GPU/cpu-uniform-results/: GPolylla_44340.out  GPolylla_44341.out  GPolylla_44342.out  GPolylla_44343.out  GPolylla_44344.out  gpolylla_44076.out  run_benchmark.slurm
experiments/CPU_and_GPU/gpu-grid-results/: gpolylla_44061.out  gpolylla_44062.out  gpolylla_44063.out  gpolylla_44064.out  gpolylla_44065.out  run_benchmark.slurm
experiments/benchmark/1/: uniform_1000000.json  (+2 more)
experiments/cpu-grid-results_33/: gpolylla_44882.out  gpolylla_44884.out  gpolylla_44885.out  gpolylla_44887.err  gpolylla_44887.out  run_benchmark.slurm
src/: CMakeLists.txt  HICSS A june 15  kernel.cu  nvmlClass.h  polylla.cu  triangulation.cu  tula1.cpp
(+1730 files in other folders)
